--- a/config/sync/core.entity_view_display.paragraph.ipu_event_section.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.ipu_event_section.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.paragraph.ipu_event_section.field_original_fc_id
     - paragraphs.paragraphs_type.ipu_event_section
   module:
+    - ds
     - entity_reference_revisions
     - link
     - text
@@ -26,11 +27,40 @@ content:
     type: link
     settings:
       trim_length: 80
+      rel: nofollow
       url_only: false
       url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
+      target: '0'
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: ''
+            fi-cl: field-event-button
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
     region: content
   field_ie_fc_description:
     label: hidden
@@ -45,7 +75,35 @@ content:
     type: string
     settings:
       link_to_entity: false
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw: true
+            lbw-el: h2
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
     region: content
   field_ipu_event_document_widget:
     label: above
