--- a/config/sync/core.entity_form_display.paragraph.ipu_event_section.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.ipu_event_section.default.yml
@@ -59,7 +59,7 @@ content:
       edit_mode: closed
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ipu_event_document_widget
+      default_paragraph_type: _none
     third_party_settings: {  }
     region: content
   translation:
