--- a/config/sync/core.entity_form_display.taxonomy_term.event_sponsor.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.event_sponsor.default.yml
@@ -3,11 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.browse_files_modal
     - field.field.taxonomy_term.event_sponsor.field_logo
     - taxonomy.vocabulary.event_sponsor
   module:
+    - entity_browser
     - field_layout
-    - file
     - layout_discovery
     - path
     - text
@@ -21,30 +22,37 @@ bundle: event_sponsor
 mode: default
 content:
   description:
-    type: text_textfield
-    weight: 0
+    type: text_textarea
+    weight: 1
     region: content
     settings:
-      size: 60
       placeholder: ''
+      rows: 5
     third_party_settings: {  }
   field_logo:
-    weight: 31
-    type: file_generic
+    weight: 2
+    type: entity_browser_file
     settings:
-      progress_indicator: throbber
+      entity_browser: browse_files_modal
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      view_mode: default
+      field_widget_replace: false
+      open: false
+      preview_image_style: thumbnail
     third_party_settings: {  }
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 3
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   name:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -52,7 +60,12 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 5
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  translation:
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
