--- a/config/sync/views.view.event_sub_pages.yml
+++ b/config/sync/views.view.event_sub_pages.yml
@@ -191,7 +191,19 @@ display:
           entity_type: paragraph
           entity_field: langcode
           plugin_id: language
-      sorts: {  }
+      sorts:
+        field_order_value:
+          id: field_order_value
+          table: paragraph__field_order
+          field: field_order_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: standard
       header: {  }
       footer: {  }
       empty: {  }
