Remove dash from "geopolitical groups". Increase size of teaser (for when showing highlights). Style captions on basic pages etc. in highlights boxes.

--- a/config/sync/block.block.mainmenu.yml
+++ b/config/sync/block.block.mainmenu.yml
@@ -20,11 +20,11 @@ provider: null
 plugin: 'menu_block:main'
 settings:
   id: 'menu_block:main'
-  label: 'Geo-political groups'
+  label: 'Geopolitical groups'
   provider: menu_block
   label_display: visible
   level: 1
-  custom_level: 1
+  custom_level: '1'
   hide_children: 0
   depth: 1
   expand: 0
