--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -11,6 +11,7 @@ dependencies:
   module:
     - ds
     - entity_reference_revisions
+    - field_group
     - responsive_image
     - text
     - user
@@ -56,12 +57,13 @@ third_party_settings:
     regions:
       top:
         - node_title
-        - 'dynamic_block_field:node-top_level_menu_item'
       left:
         - body
       right:
+        - 'dynamic_block_field:node-top_level_menu_item'
         - 'dynamic_block_field:node-menu_block'
         - 'dynamic_block_field:node-contextual_menu_event_navigation'
+        - group_image
         - field_media_image
         - field_caption
       bottom:
@@ -91,7 +93,7 @@ third_party_settings:
             classes: {  }
       'dynamic_block_field:node-top_level_menu_item':
         plugin_id: 'dynamic_block_field:node-top_level_menu_item'
-        weight: 1
+        weight: 2
         label: hidden
         formatter: default
       node_title:
@@ -109,6 +111,26 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
+  field_group:
+    group_image:
+      children:
+        - field_media_image
+        - field_caption
+      parent_name: ''
+      weight: 5
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: group-image
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: Image
+      region: hidden
 _core:
   default_config_hash: g1S3_GLaxq4l3I9RIca5Mlz02MxI2KmOquZpHw59akM
 id: node.page.default
@@ -118,13 +140,13 @@ mode: default
 content:
   body:
     label: hidden
-    weight: 2
+    weight: 1
     type: text_default
     settings: {  }
     third_party_settings: {  }
     region: left
   field_caption:
-    weight: 6
+    weight: 7
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -132,7 +154,7 @@ content:
     region: right
   field_media_image:
     type: responsive_image
-    weight: 5
+    weight: 6
     region: right
     label: hidden
     settings:
@@ -141,7 +163,7 @@ content:
     third_party_settings: {  }
   field_sections:
     label: hidden
-    weight: 7
+    weight: 6
     type: entity_reference_revisions_entity_view
     settings:
       view_mode: full
