--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,7 @@
         "drupal/entity_reference_revisions": "^1.6",
         "drupal/entityqueue": "^1.0@beta",
         "drupal/eva": "^2.0-rc3",
-        "drupal/facets": "^1.3",
+        "drupal/facets": "1.x-dev",
         "drupal/features": "^3.8",
         "drupal/feeds": "^3.0@alpha",
         "drupal/field_collection": "^1.0@alpha",
