--- a/config/sync/facets.facet.event_type.yml
+++ b/config/sync/facets.facet.event_type.yml
@@ -1,4 +1,4 @@
-uuid: 4c8df143-91f0-4494-b04d-6282227b0503
+uuid: 96cdde50-d44a-4a4a-a76e-6bad7d22632a
 langcode: en
 status: true
 dependencies:
@@ -7,13 +7,13 @@ dependencies:
     - views.view.search
   module:
     - search_api
-id: theme
-name: Theme
-url_alias: theme
+id: event_type
+name: 'Event type'
+url_alias: event_type
 weight: 0
 min_count: 1
 show_only_one_result: false
-field_identifier: field_theme
+field_identifier: field_event_type
 facet_source_id: 'search_api:views_page__search__page_1'
 widget:
   type: links
@@ -23,9 +23,9 @@ widget:
     soft_limit_settings:
       show_less_label: 'Show less'
       show_more_label: 'Show more'
-    show_reset_link: true
+    show_reset_link: false
     reset_text: 'Show all'
-    hide_reset_when_no_selection: true
+    hide_reset_when_no_selection: false
 query_operator: or
 use_hierarchy: false
 expand_hierarchy: false
@@ -34,18 +34,6 @@ hard_limit: 0
 exclude: false
 only_visible_when_facet_source_is_visible: true
 processor_configs:
-  count_limit:
-    processor_id: count_limit
-    weights:
-      build: 50
-    settings:
-      minimum_items: 1
-      maximum_items: null
-  list_item:
-    processor_id: list_item
-    weights:
-      build: 5
-    settings: {  }
   term_weight_widget_order:
     processor_id: term_weight_widget_order
     weights:
