--- a/config/sync/facets.facet_source.search_api__views_page__search__page_1.yml
+++ b/config/sync/facets.facet_source.search_api__views_page__search__page_1.yml
@@ -4,7 +4,7 @@ status: true
 dependencies: {  }
 id: search_api__views_page__search__page_1
 name: 'search_api:views_page__search__page_1'
-filter_key: ''
+filter_key: field_theme
 url_processor: query_string
 breadcrumb:
   active: true
