--- a/config/sync/search_api.index.site_search.yml
+++ b/config/sync/search_api.index.site_search.yml
@@ -8,6 +8,9 @@ dependencies:
     - search_api
   config:
     - field.storage.node.field_country
+    - field.storage.node.field_event_type
+    - field.storage.node.field_ipu_structure
+    - field.storage.node.field_article_type
     - field.storage.node.field_theme
     - search_api.server.database
     - core.entity_view_mode.node.full
@@ -38,6 +41,22 @@ name: 'Site search'
 description: 'Basic index, with database server'
 read_only: false
 field_settings:
+  created:
+    label: 'Authored on'
+    datasource_id: 'entity:node'
+    property_path: created
+    type: date
+    dependencies:
+      module:
+        - node
+  field_article_type:
+    label: 'News type'
+    datasource_id: 'entity:node'
+    property_path: field_article_type
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_article_type
   field_country:
     label: Country
     datasource_id: 'entity:node'
@@ -46,6 +65,22 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_country
+  field_event_type:
+    label: 'Event Type'
+    datasource_id: 'entity:node'
+    property_path: field_event_type
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_event_type
+  field_ipu_structure:
+    label: 'IPU structure'
+    datasource_id: 'entity:node'
+    property_path: field_ipu_structure
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_ipu_structure
   field_theme:
     label: Theme
     datasource_id: 'entity:node'
@@ -79,7 +114,7 @@ field_settings:
           section_page: full
           vacancy: full
   status:
-    label: null
+    label: status
     datasource_id: 'entity:node'
     property_path: status
     type: boolean
@@ -96,8 +131,16 @@ field_settings:
     dependencies:
       module:
         - node
+  type:
+    label: 'Content type'
+    datasource_id: 'entity:node'
+    property_path: type
+    type: string
+    dependencies:
+      module:
+        - node
   uid:
-    label: null
+    label: uid
     datasource_id: 'entity:node'
     property_path: uid
     type: integer
@@ -130,9 +173,14 @@ processor_settings:
   content_access:
     weights:
       preprocess_query: -30
+  hierarchy:
+    fields:
+      field_ipu_structure: taxonomy_term-parent
+    weights:
+      preprocess_index: -45
   highlight:
     highlight: always
-    highlight_partial: false
+    highlight_partial: true
     excerpt: true
     excerpt_length: 256
     exclude_fields: {  }
@@ -149,12 +197,10 @@ processor_settings:
     alt: true
     tags:
       b: 2
-      em: 1
       h1: 5
       h2: 3
       h3: 2
       strong: 2
-      u: 1
     weights:
       preprocess_index: -15
       preprocess_query: -15
@@ -163,6 +209,7 @@ processor_settings:
     fields:
       - rendered_item
       - title
+      - type
     weights:
       preprocess_index: -20
       preprocess_query: -20
@@ -170,6 +217,16 @@ processor_settings:
   solr_date_range:
     weights:
       preprocess_index: 0
+  stemmer:
+    all_fields: true
+    fields:
+      - rendered_item
+    exceptions:
+      mexican: mexic
+      texan: texa
+    weights:
+      preprocess_index: 0
+      preprocess_query: 0
   tokenizer:
     all_fields: true
     fields:
@@ -185,6 +242,7 @@ processor_settings:
     fields:
       - rendered_item
       - title
+      - type
     weights:
       preprocess_index: -20
       preprocess_query: -20
