--- a/config/sync/views.view.search.yml
+++ b/config/sync/views.view.search.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_country
     - field.storage.node.field_theme
     - search_api.index.site_search
+    - taxonomy.vocabulary.country
   module:
     - better_exposed_filters
     - search_api
@@ -89,6 +90,81 @@ display:
       row:
         type: fields
       fields:
+        created:
+          id: created
+          table: search_api_index_site_search
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: timestamp
+          settings:
+            date_format: short_date_only
+            custom_date_format: ''
+            timezone: ''
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          field_rendering: true
+          fallback_handler: search_api_date
+          fallback_options:
+            date_format: date_all_day
+            custom_date_format: ''
+            timezone: ''
+            link_to_item: false
+            use_highlighting: false
+            multi_type: separator
+            multi_separator: ', '
+          plugin_id: search_api_field
         type:
           id: type
           table: search_api_datasource_site_search_entity_node
@@ -287,12 +363,9 @@ display:
           multi_separator: ', '
           plugin_id: search_api
         field_country:
+          id: field_country
           table: search_api_index_site_search
           field: field_country
-          id: field_country
-          entity_type: null
-          entity_field: null
-          plugin_id: search_api_field
           relationship: none
           group_type: group
           admin_label: ''
@@ -329,7 +402,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -339,7 +412,8 @@ display:
           hide_alter_empty: true
           click_sort_column: target_id
           type: entity_reference_label
-          settings: {  }
+          settings:
+            link: false
           group_column: target_id
           group_columns: {  }
           group_rows: true
@@ -357,7 +431,44 @@ display:
             use_highlighting: false
             multi_type: separator
             multi_separator: ', '
-            display_methods: {  }
+            display_methods:
+              article:
+                display_method: label
+              country:
+                display_method: label
+                view_mode: default
+              documents:
+                display_method: label
+              event:
+                display_method: label
+              event_session_type:
+                display_method: label
+              event_sponsor:
+                display_method: label
+                view_mode: default
+              geographic_region:
+                display_method: label
+              geopolitical_group:
+                display_method: label
+              governing_body:
+                display_method: label
+              ipu_structure:
+                display_method: label
+              member_role:
+                display_method: label
+              publication:
+                display_method: label
+                view_mode: default
+              tags:
+                display_method: label
+              theme:
+                display_method: label
+                view_mode: default
+              vacancy:
+                display_method: label
+          entity_type: null
+          entity_field: null
+          plugin_id: search_api_field
         field_theme:
           id: field_theme
           table: search_api_index_site_search
@@ -423,7 +534,7 @@ display:
           field_rendering: false
           fallback_handler: search_api_entity
           fallback_options:
-            link_to_item: true
+            link_to_item: false
             use_highlighting: false
             multi_type: separator
             multi_separator: ', '
@@ -442,6 +553,8 @@ display:
               event_sponsor:
                 display_method: label
                 view_mode: default
+              geographic_region:
+                display_method: label
               geopolitical_group:
                 display_method: label
               governing_body:
@@ -536,7 +649,7 @@ display:
             description: ''
             use_operator: false
             operator: search_api_fulltext_op
-            identifier: search_api_fulltext
+            identifier: keys
             required: false
             remember: false
             multiple: false
@@ -565,6 +678,51 @@ display:
           fields:
             - rendered_item
           plugin_id: search_api_fulltext
+        type:
+          id: type
+          table: search_api_index_site_search
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: not
+          value:
+            committee_member: committee_member
+            entity_browser_test: entity_browser_test
+          group: 1
+          exposed: false
+          expose:
+            operator_id: type_op
+            label: Type
+            description: ''
+            use_operator: false
+            operator: type_op
+            identifier: type
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              product_owner: '0'
+              web_editor: '0'
+              writer: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          plugin_id: search_api_options
         search_api_language:
           id: search_api_language
           table: search_api_index_site_search
@@ -603,6 +761,54 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: search_api_language
+        field_country:
+          id: field_country
+          table: search_api_index_site_search
+          field: field_country
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_country_op
+            label: Country
+            description: ''
+            use_operator: false
+            operator: field_country_op
+            identifier: country
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              product_owner: '0'
+              web_editor: '0'
+              writer: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: textfield
+          limit: true
+          vid: country
+          hierarchy: false
+          error_message: true
+          plugin_id: search_api_term
       sorts:
         search_api_relevance:
           id: search_api_relevance
@@ -615,6 +821,18 @@ display:
           exposed: false
           expose:
             label: Relevance
+          plugin_id: search_api
+        created:
+          id: created
+          table: search_api_index_site_search
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
           plugin_id: search_api
         title:
           id: title
@@ -645,6 +863,10 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
@@ -652,6 +874,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user
       tags:
         - 'config:field.storage.node.field_country'
         - 'config:field.storage.node.field_theme'
@@ -668,7 +891,7 @@ display:
         type: none
       defaults:
         cache: false
-      exposed_block: true
+      exposed_block: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -676,6 +899,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user
       tags:
         - 'config:field.storage.node.field_country'
         - 'config:field.storage.node.field_theme'
