--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -43,9 +43,10 @@ mounts:
 build:
     flavor: composer
 
-
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
+    build: |
+        curl -sS https://platform.sh/cli/installer | php
     # The deploy hook runs after your application has been deployed and started.
     deploy: |
         set -e
@@ -118,6 +119,12 @@ crons:
     drupal:
         spec: '*/20 * * * *'
         cmd: 'cd web ; drush core-cron'
+    snapshot:
+        spec: '0 5 * * *'
+        cmd: |
+            if [ "$PLATFORM_BRANCH" = master ]; then
+                platform snapshot:create --yes --no-wait
+            fi
 
 # Setting for php.ini
 variables:
