Remove feed display attachment from taxonomy page views. Default Flickr. Flickr block formatting.

--- a/composer.json
+++ b/composer.json
@@ -239,6 +239,9 @@
             },
             "drupal/ultimenu": {
                 "Remove mobile toggle button from ultimenu": "web/patches/remove_mobile_toggle_button_from_ultimenu.patch"
+            },
+            "drupal/flickr": {
+                "Error messages when adding Flickr filter to text format": "https://www.drupal.org/files/issues/2019-08-27/flickr-add-filter-settings-2958360-2.patch"
             }
         },
         "drupal-scaffold": {
