--- a/config/sync/filter.format.flickr.yml
+++ b/config/sync/filter.format.flickr.yml
@@ -14,4 +14,5 @@ filters:
     status: true
     weight: 9
     settings:
-      flickr_filter_imagesize: '200'
+      flickr_filter_default_size: z
+      flickr_filter_caption: '1'
