--- a/config/sync/views.view.taxonomy_term.yml
+++ b/config/sync/views.view.taxonomy_term.yml
@@ -273,8 +273,8 @@ display:
           offset: 0
       path: taxonomy/term/%/feed
       displays:
-        page_1: page_1
         default: '0'
+        page_1: '0'
       style:
         type: rss
         options:
@@ -286,7 +286,8 @@ display:
         options:
           relationship: none
           view_mode: default
-      display_extenders: {  }
+      display_extenders:
+        metatag_display_extender: {  }
     cache_metadata:
       contexts:
         - 'languages:language_interface'
