--- a/config/sync/core.entity_view_display.node.vacancy.full.yml
+++ b/config/sync/core.entity_view_display.node.vacancy.full.yml
@@ -13,13 +13,13 @@ dependencies:
     - field.field.node.vacancy.field_vacancy_location
     - field.field.node.vacancy.field_vacancy_type
     - node.type.vacancy
+    - responsive_image.styles.narrow
   module:
     - address
     - datetime
     - ds
     - field_group
     - responsive_image
-    - taxonomy
     - text
     - user
 third_party_settings:
@@ -27,7 +27,7 @@ third_party_settings:
     group_details:
       children: {  }
       parent_name: ''
-      weight: 11
+      weight: 20
       label: Details
       format_settings:
         formatter: collapsible
@@ -45,28 +45,70 @@ third_party_settings:
       region: hidden
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: bs_2col_stacked
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        layout:
+          wrapper: div
+          classes:
+            row: row
+          add_layout_class: 1
+          attributes: ''
+        regions:
+          top:
+            wrapper: div
+            classes:
+              col-sm-12: col-sm-12
+            add_region_classes: 1
+            attributes: ''
+          left:
+            wrapper: div
+            classes:
+              col-sm-6: col-sm-6
+            add_region_classes: 1
+            attributes: ''
+          right:
+            wrapper: div
+            classes:
+              col-sm-6: col-sm-6
+            add_region_classes: 1
+            attributes: ''
+          bottom:
+            wrapper: div
+            classes:
+              col-sm-12: col-sm-12
+            add_region_classes: 1
+            attributes: ''
     regions:
-      content:
+      top:
         - field_vacancy_type
         - node_title
-        - field_deadline
-        - field_home_based
-        - field_vacancy_location
-        - field_media_image
+      left:
         - body
         - field_how_to_apply
         - links
+      right:
+        - field_vacancy_location
+        - field_deadline
+        - field_media_image
     fields:
       node_title:
         plugin_id: node_title
         weight: 1
         label: hidden
         formatter: default
+        settings:
+          wrapper: h1
+          class: ''
+          link: false
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.vacancy.full
 targetEntityType: node
 bundle: vacancy
@@ -74,65 +116,78 @@ mode: full
 content:
   body:
     label: hidden
-    weight: 6
+    weight: 2
     type: text_default
     settings: {  }
     third_party_settings: {  }
-    region: content
+    region: left
   field_deadline:
     label: inline
-    weight: 2
+    weight: 6
     type: datetime_default
     settings:
-      format_type: medium
       timezone_override: ''
-    third_party_settings: {  }
-    region: content
-  field_home_based:
-    label: inline
-    weight: 3
-    type: boolean
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    region: content
+      format_type: long_date_without_time
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    region: right
   field_how_to_apply:
     label: above
-    weight: 7
+    weight: 3
     type: text_default
     settings: {  }
     third_party_settings: {  }
-    region: content
+    region: left
   field_media_image:
     type: responsive_image
-    weight: 5
-    region: content
+    weight: 7
+    region: right
     label: hidden
     settings:
-      responsive_image_style: ''
+      responsive_image_style: narrow
       image_link: ''
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_vacancy_location:
-    label: inline
-    weight: 4
+    label: hidden
+    weight: 5
     type: address_default
     settings: {  }
     third_party_settings: {  }
-    region: content
+    region: right
   field_vacancy_type:
-    type: entity_reference_rss_category
+    type: entity_reference_label
     weight: 0
-    region: content
+    region: top
     label: hidden
-    settings: {  }
-    third_party_settings: {  }
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   links:
-    weight: 8
-    region: content
+    weight: 4
+    region: left
     settings: {  }
     third_party_settings: {  }
 hidden:
   field_contact_ipu: true
+  field_home_based: true
   langcode: true
