--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -113,6 +113,38 @@ web:
                 # Provide a longer TTL (2 weeks) for aggregated CSS and JS files.
                 '^/sites/default/files/(css|js)':
                     expires: 2w
+    '/130ans':
+        # The folder from which to serve static assets, for this location.
+        #
+        # This is a filesystem path, relative to the application root.
+        root: 'web/130ans'
+
+        # How long to allow static assets from this location to be cached.
+        #
+        # Can be a time in seconds, or -1 for no caching. Times can be
+        # suffixed with "s" (seconds), "m" (minutes), "h" (hours), "d"
+        # (days), "w" (weeks), "M" (months, as 30 days) or "y" (years, as
+        # 365 days).
+        expires: 5m
+
+        # Whether to forward disallowed and missing resources from this
+        # location to the application.
+        #
+        # Can be true, false or a URI path string.
+        passthru: '/index.html'
+
+        # Deny access to static files in this location.
+        allow: true
+
+        # Rules for specific URI patterns.
+        rules:
+            # Allow access to common static files.
+            '\.(jpe?g|png|gif|svgz?|css|js|map|ico|bmp|eot|woff2?|otf|ttf)$':
+                allow: true
+            '^/robots\.txt$':
+                allow: true
+            '^/sitemap\.xml$':
+                allow: true
 
 # The configuration of scheduled execution.
 crons:
