Make fields on Calls to actio paras translatable:

--- a/config/sync/field.field.paragraph.call_to_action.field_description.yml
+++ b/config/sync/field.field.paragraph.call_to_action.field_description.yml
@@ -18,7 +18,7 @@ bundle: call_to_action
 label: 'Short description'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
