--- a/config/sync/language.content_settings.block_content.cta_block.yml
+++ b/config/sync/language.content_settings.block_content.cta_block.yml
@@ -9,6 +9,8 @@ dependencies:
 third_party_settings:
   content_translation:
     enabled: true
+    bundle_settings:
+      untranslatable_fields_hide: '1'
 id: block_content.cta_block
 target_entity_type_id: block_content
 target_bundle: cta_block
