--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -16,6 +16,14 @@
     type: redirect
     to: "https://{default}/"
 
+"http://ipu.org/":
+  type: redirect
+  to: "https://{default}/"
+
+"https://ipu.org/":
+  type: redirect
+  to: "https://{default}/"
+
 "http://beta.ipu.org/":
   type: redirect
   to: "https://{default}/"
