--- a/config/sync/views.view.countries.yml
+++ b/config/sync/views.view.countries.yml
@@ -731,8 +731,8 @@ display:
           label: ''
           exclude: true
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: '{{ name_1| transliterate() }} '
             make_link: false
             path: ''
             absolute: false
