--- a/config/sync/google_analytics.settings.yml
+++ b/config/sync/google_analytics.settings.yml
@@ -4,10 +4,9 @@ domain_mode: 0
 cross_domains: ''
 visibility:
   request_path_mode: 0
-  request_path_pages: "/admin\n/admin/*\n/batch\n/node/add*\n/node/*/*\n/user/*/*"
+  request_path_pages: "/admin\r\n/admin/*\r\n/batch\r\n/node/add*\r\n/node/*/edit\r\n/fr/node/*/edit\r\n/user/*/*"
   user_role_mode: 0
-  user_role_roles:
-    '': null
+  user_role_roles: {  }
   user_account_mode: 0
 track:
   outbound: true
@@ -18,10 +17,7 @@ track:
   linkid: true
   urlfragments: false
   userid: false
-  messages:
-    status: '0'
-    warning: '0'
-    error: '0'
+  messages: {  }
   site_search: true
   adsense: false
   displayfeatures: false
