--- a/config/sync/google_analytics.settings.yml
+++ b/config/sync/google_analytics.settings.yml
@@ -18,7 +18,7 @@ track:
   urlfragments: false
   userid: false
   messages: {  }
-  site_search: true
+  site_search: false
   adsense: false
   displayfeatures: false
 privacy:
